Fixed to allow scrolling. Allow overflow scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -9,12 +9,13 @@
   padding-left: 20px;
 }
 #cover{
-    background-color:#ccc;
+    background-color:#343a40;
+    top: 0;
+    bottom:0;
+    right: 0;
+    left:0;
     position:fixed;
-    width:100%;
-    height:100%;
-    top:0px;
-    left:0px;
-    z-index:1000;
+    overflow-y:scroll;
+    overflow-x:hidden;
 }
 button.download{padding-left: 150px;}
